# dnd-app

./: .gitignore  GEMINI.md  MAGIC_INITIATE_FIX_SUMMARY.md  README.md  TYPESCRIPT_MIGRATION.md  app.js  app.js.bak  app.js.bak2  app.js.part1  app.js.patch  audit-logic.mjs  debug-btns.mjs  debug-l3.mjs  fix-bg-continue3.cjs  fix-bg-continue4.cjs  fix-bg-continue5.cjs  fix-bg-continue6.cjs  fix-bg-continue7.cjs  fix-bg-continue8.cjs  fix-bg-reset.cjs  fix-guided-bg.js  index.html  melhoria.txt  package-lock.json  package.json  patch_rest.mjs  scratch-pw.js  scratch.html  scratch.js  scratch.ts  styles.css  test-audit.mjs  test-bg-select.js  test-bg-select2.js  test-hp.mjs  test-regression.mjs  test-store.mjs  tsconfig.json  vite.config.js
backend/: README.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
backend/app/: main.py
backend/dnd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: architecture.md
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: build_5etools_data.py  sync_data.py
backend/src/: app.module.ts  main.ts
backend/test/: actions.spec.ts  characters-ledger-events.spec.ts  characters-persistence.spec.ts  characters-prisma-repository.spec.ts  characters-resource-ledger.spec.ts  characters-resource-projection.spec.ts  characters-storage.spec.ts  characters.spec.ts  domain-contracts.spec.ts  health.spec.ts  inventory.spec.ts  resources.spec.ts  rules.spec.ts  shield-armor-interactions.spec.ts
backend/tests/: test_capabilities.py  test_catalog_routes.py  test_catalog_service.py  (+3 more)
(+630 files in other folders)
