[project]
name = "dnd-backend"
version = "0.1.0"
description = "Backend API for the D&D app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
